# anonymize

./: .gitignore  CLAUDE.md  README.md  index.html  justfile  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: build.yml
src/: App.vue
src-python/: build.py  pyproject.toml
src-python/anonymize_api/: __init__.py  main.py
src-python/anonymize_api/api/: routes.py  schemas.py
src-python/anonymize_api/core/: analyzer.py  anonymizer.py  config.py
src-python/anonymize_api/core/engines/: __init__.py  base.py  spacy_engine.py  transformers_engine.py
src-python/anonymize_api/recognizers/: __init__.py  swiss.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: entity-config.json
src-tauri/src/: lib.rs  main.rs  sidecar.rs
src/assets/: main.css
src/components/: AnonymizationSettings.vue  EntityDetailsSidebar.vue  EntityEditPopover.vue  EntityToggle.vue  FileUpload.vue  ModelSettings.vue  ResultViewer.vue  TextInput.vue  UpdateBanner.vue
src/components/ui/: badge.vue  button.vue  card.vue  popover.vue  switch.vue  tooltip.vue
src/composables/: useAnonymizer.ts  useEntityConfig.ts  useSidecar.ts  useUpdater.ts
src/lib/: api.ts
