[project]
name = "anonymize-api"
version = "0.1.0"
description = "Swiss document anonymization API using Presidio"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "spacy>=3.7.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "de-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/de_core_news_sm-3.8.0/de_core_news_sm-3.8.0-py3-none-any.whl",
    # Transformers engine dependencies (model downloaded at runtime, not build time)
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "spacy-huggingface-pipelines>=0.0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyinstaller>=6.0.0",
    "pytest>=8.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["anonymize_api"]
